# aoc2025

./: .gitignore  README.md  Taskfile.yml  advent.opam  dune-project
input/day10/: tiny.txt
input/day9/: letterh.txt
lib/: dune  registry.ml  registry.mli
lib/day1/: common.ml  part1.ml  part2.ml
lib/day2/: common.ml  dune  part1.ml  part2.ml
lib/day3/: common.ml  part1.ml  part2.ml
lib/day4/: common.ml  dune  part1.ml  part2.ml
lib/day5/: dune  part1.ml
lib/shared/: dune  exception.mli  shared.ml  shared.mli  solver.ml  solver.mli  util.ml  util.mli
src/: dune  registry.ml  registry.mli
src/day1/: dune  part1.ml
src/day10/: common.ml  dune  part1.ml  part2.ml
src/day11/: common.ml  dune  part1.ml  part2.ml
src/day12/: common.ml  dune  part1.ml
src/day2/: common.ml  part2.ml
src/day3/: dune  part1.ml  part2.ml
src/day4/: common.ml  part1.ml  part2.ml
src/day5/: common.ml  part2.ml
src/day6/: common.ml  dune  part1.ml  part2.ml
src/day7/: common.ml  dune  part1.ml  part2.ml
src/day8/: common.ml  dune  part1.ml  part2.ml
src/day9/: common.ml  dune  part1.ml  part2.ml
src/shared/: exception.mli  solver.ml  solver.mli  util.ml  util.mli
src/template/: dune  part1.ml
test/: common.ml  day10_test.ml  day11_test.ml  day12_test.ml  day1_test.ml  day2_test.ml  day3_test.ml  day4_test.ml  day5_test.ml  day6_test.ml  day7_test.ml  day8_test.ml  day9_test.ml  dune
